--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Readarr - Dive in</title>
+    <title>Readarr</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap-overrides.css" />
-    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="//use.fontawesome.com/releases/v5.13.0/css/all.css" />
     <link rel="stylesheet" type="text/css" href="css/theme.css" />
 
     <link href='//fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#home" class="navbar-brand"><img src="img/logo.png" /><span class="logo-text">readarr</span></a>
+                <a href="#home" class="navbar-brand"><img src="img/logo.png" /><span class="logo-text">Readarr</span></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse header-navbar" role="navigation">
@@ -38,8 +38,8 @@
                     <li><a href="#features"><i class="fa fa-star"></i> FEATURES</a></li>
                     <li><a href="#download"><i class="fa fa-download"></i> DOWNLOAD</a></li>
                     <li><a href="#support"><i class="fa fa-question-circle"></i> SUPPORT</a></li>
-                    <li><a href="https://opencollective.com/readarr"><i class="fa fa-heart"></i> DONATE</a></li>
-                    <li><a href="https://github.com/Readarr/Readarr" target="_blank"><i class="fa fa-github-alt"></i> GITHUB</a></li>
+                    <li><a href="https://opencollective.com/readarr" target="_blank"><i class="fa fa-heart"></i> DONATE</a></li>
+                    <li><a href="https://github.com/Readarr/Readarr" target="_blank"><i class="fab fa-github"></i> GITHUB</a></li>
                 </ul>
             </div>
         </div>
@@ -54,7 +54,7 @@
         </article>
         <article class="slide" id="ideas">
             <div class="info">
-                <h2>Notifications and fully customizable quality profiles.</h2>
+                <h2>Notifications and fully customizable profiles.</h2>
             </div>
             <img class="asset left-480 sp600 t180 z1" src="img/slider/qualityprofile.png" />
             <img class="asset left-200 sp600 t260 z2" src="img/slider/notifications.png" />
@@ -77,6 +77,14 @@
             </div>
         </article>
     </section>
+    <div id='summary' class='summary'>
+        <div class='container'>
+            <div id='summary-text'>
+                Readarr is a ebook collection manager for Usenet and BitTorrent users.  It can monitor multiple RSS feeds for new books from your favorite authors and will interface with clients and indexers to grab, sort, and rename them. 
+            </div>
+        </div>
+    </div>
+    <hr />
     <div id="features" class="features">
         <div class="container">
             <div class="section-header">
@@ -110,6 +118,34 @@
                     </p>
                 </div>
             </div>
+            <div class="row feature">
+                <div class="col-sm-6">
+                    <img src="img/features/calibre.png" class="img-responsive" />
+                </div>
+                <div class="col-sm-6 info">
+                    <h3>
+                        <i class="fa fa-chevron-right"></i>
+                        Calibre Integration
+                    </h3>
+                    <p>
+                        Automatically integrates with Calibre library.
+                    </p>
+                </div>
+            </div>
+            <div class="row feature">
+                <div class="col-sm-6 pic-right">
+                    <img src="img/features/import_lists.png" class="pull-right img-responsive" />
+                </div>
+                <div class="col-sm-6 info info-left">
+                    <h3>
+                        <i class="fa fa-chevron-right"></i>
+                        Import Lists
+                    </h3>
+                    <p>
+                        Import lists from other supported services like Goodreads and LazyLibrarian.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -120,16 +156,13 @@
             </div>
 
             <div class="row download_wrapper">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="option">
                         <div class="wrapper">
-                            <h3><i class="fa fa-linux"></i> Linux</h3>
+                            <h3><i class="fab fa-linux"></i> Linux</h3>
                             <div class="features">
                                 <p>
                                     Automatic Updates
-                                </p>
-                                <p>
-                                    Use your package manager
                                 </p>
                             </div>
                             <a class="button" href="https://github.com/Readarr/Readarr/wiki/Installation#wiki-linux" target="_blank">INSTRUCTIONS</a>
@@ -137,10 +170,10 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4 featured">
+                <div class="col-sm-3 featured">
                     <div class="option">
                         <div class="wrapper">
-                            <h3><i class="fa fa-windows"></i> Windows</h3>
+                            <h3><i class="fab fa-windows"></i> Windows</h3>
                             <div class="features">
                                 <p>
                                     Automatic Updates
@@ -152,15 +185,35 @@
                                      Installer
                                 </p>
                             </div>
-                            <a class="button" href="https://github.com/readarr/Readarr/releases">DOWNLOAD</a>
+                            <a class="button" href="https://github.com/Readarr/Readarr/releases">DOWNLOAD</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-3 featured">
                     <div class="option">
                         <div class="wrapper">
-                            <h3><i class="fa fa-apple"></i> OS X</h3>
+                            <h3><i class="fab fa-docker"></i> Docker</h3>
+                            <div class="features">
+                                <p>
+                                    Easy setup/deployment
+                                </p>
+                                <p>
+                                    Run as a Service
+                                </p>
+                                <p>
+                                    Run Anywhere
+                                </p>
+                            </div>
+                            <a class="button" href="https://github.com/Readarr/Readarr/wiki/Installation#docker" target="_blank">INSTRUCTIONS</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="option">
+                        <div class="wrapper">
+                            <h3><i class="fab fa-apple"></i> OS X</h3>
                             <div class="features">
                                 <p>
                                     Automatic Updates
@@ -170,6 +223,8 @@
                         </div>
                     </div>
                 </div>
+
+                
             </div>
         </div>
     </div>
@@ -182,7 +237,7 @@
             <div class="row">
                 <a class="col-sm-3" href="https://github.com/Readarr/Readarr/wiki" target="_blank">
                     <div class="text">
-                        <i class="fa fa-lightbulb-o fa-2x"></i>
+                        <i class="fas fa-lightbulb fa-2x"></i>
                         <h4>Wiki</h4>
                         <p>
                             Check out the FAQ, API documentation and other guides
@@ -202,7 +257,7 @@
 
                 <a class="col-sm-3" href="https://github.com/Readarr/Readarr/issues" target="_blank">
                     <div class="text">
-                        <i class="fa fa-github fa-2x"></i>
+                        <i class="fab fa-github fa-2x"></i>
                         <h4>GitHub Issues</h4>
                         <p>
                             Track bugs and features for the things that matter to you.
@@ -212,7 +267,7 @@
 
                 <a class="col-sm-3" href="https://www.reddit.com/r/readarr" target="_blank">
                     <div class="text">
-                        <i class="fa fa-reddit-alien fa-2x"></i>
+                        <i class="fab fa-reddit-alien fa-2x"></i>
                         <h4>Readarr subreddit</h4>
                         <p>
                             Discuss Readarr and talk to other users.
@@ -237,7 +292,7 @@
         </div>
     </footer>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="js/theme.js"></script>
 
