--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
     <div id='summary' class='summary'>
         <div class='container'>
-            <div id='summary-text'>
+            <div id='summary-text' class='summary-text'>
                 Readarr is a ebook collection manager for Usenet and BitTorrent users.  It can monitor multiple RSS feeds for new books from your favorite authors and will interface with clients and indexers to grab, sort, and rename them. 
             </div>
         </div>
