--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     </div>
                 </a>
 
-                <a class="col-sm-3" href="https://discord.gg/WWd5ZGg" target="_blank">
+                <a class="col-sm-3" href="https://readarr.com/discord" target="_blank">
                     <div class="text">
                         <i class="fa fa-comment fa-2x"></i>
                         <h4>Discord Server</h4>
