--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=https://opencollective.com/Readarr>
+                        <a href=/donate>
                             <i class="fas fa-heart"></i>
                             DONATE
                         </a>
@@ -712,6 +712,11 @@ sudo systemctl enable --now readarr</code></pre>
     </script>
     <script src=js/theme.js?v=85693f7f35c872717ee514c10ca38fdc></script>
     <script type=text/javascript src=js/index-slider.js?v=072006930bd52788bb7ab0a7d16861f7></script>
+    <script type=text/javascript>
+        if (window.location.hash.toLocaleLowerCase() === "#donate") {
+            window.location.replace("https://lidarr.audio/donate");
+        }
+    </script>
 </body>
 
 </html>
