--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@ sudo systemctl enable --now readarr</code></pre>
     <script type=text/javascript src=js/index-slider.js?v=072006930bd52788bb7ab0a7d16861f7></script>
     <script type=text/javascript>
         if (window.location.hash.toLocaleLowerCase() === "#donate") {
-            window.location.replace("https://lidarr.audio/donate");
+            window.location.replace("https://readarr.com/donate");
         }
     </script>
 </body>
