--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ sudo systemctl enable --now readarr</code></pre>
                             <dd>
                                 <p>Open the archive and drag the Readarr icon to your Application folder.</p>
                                 <div class="alert alert-warning">
-                                    Readarr is not compatible with OSX versions < 10.13 (High Sierra) due to netcore incompatibilities. </div>
+                                    Readarr is not compatible with OSX versions < 10.15 (Catalina) due to .NET incompatibilities. </div>
                             </dd>
                             <dt>
                                 <span class=step>3</span>
