macos self-sign

--- a/index.html
+++ b/index.html
@@ -414,13 +414,20 @@ sudo systemctl enable --now readarr</code></pre>
                             </dd>
                             <dt>
                                 <span class=step>3</span>
+                                Self-sign Readarr
+                            </dt>
+                            <dd>
+                                <p>Self-sign Readarr `codesign --force --deep -s - Readarr.app`</p>
+                            </dd>
+                            <dt>
+                                <span class=step>4</span>
                                 Start Readarr
                             </dt>
                             <dd>
                                 <p>Open Readarr.app in your Application folder.</p>
                             </dd>
                             <dt>
-                                <span class=step>4</span>
+                                <span class=step>5</span>
                                 View Readarr
                             </dt>
                             <dd>
