update windows download links

--- a/index.html
+++ b/index.html
@@ -247,9 +247,12 @@
                             </dt>
                             <dd>
                                 <p>
-                                    Please see our Servarr Wiki for installation instructions.
-                                    <a href=https://wiki.servarr.com/readarr/installation#windows>Link</a>
+                                    Please see our Servarr Wiki for
+                                    <a href=https://wiki.servarr.com/readarr/installation#windows> installation instructions.</a>
                                 </p>
+                                <p>Download the Windows Installer with the following link and execute it.</p>
+                                <a class="btn btn-radarr" href=https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x64&installer=true>Download Windows x64 Installer</a>
+                                <a class="btn btn-radarr" href=https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x86&installer=true>Download Windows x86 Installer</a>
                             </dd>
                         </dl>
                         <div class=install-alternatives>
