--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                                     <a href=https://wiki.servarr.com/readarr/installation#windows> installation instructions.</a>
                                 </p>
                                 <p>Download the Windows Installer with the following link and execute it.</p>
-                                <a class="btn btn-radarr" href=https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x64&installer=true>Download Windows x64 Installer</a>
-                                <a class="btn btn-radarr" href=https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x86&installer=true>Download Windows x86 Installer</a>
+                                <a class="btn btn-readarr" href=https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x64&installer=true>Download Windows x64 Installer</a>
+                                <a class="btn btn-readarr" href=https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x86&installer=true>Download Windows x86 Installer</a>
                             </dd>
                         </dl>
                         <div class=install-alternatives>
@@ -667,8 +667,8 @@ sudo systemctl enable --now readarr</code></pre>
     <script>
         hljs.initHighlightingOnLoad();
     </script>
-    <script src=js/theme.js?v=453b4ff1a4f41c49315a28f79aa5ea83></script>
-    <script type=text/javascript src=js/index-slider.js?v=48ba37f65a8c9499e4833ad1924fccb7></script>
+    <script src=js/theme.js?v=85693f7f35c872717ee514c10ca38fdc></script>
+    <script type=text/javascript src=js/index-slider.js?v=072006930bd52788bb7ab0a7d16861f7></script>
     <script type=text/javascript>
         if (window.location.hash.toLocaleLowerCase() === "#donate") {
             window.location.replace("https://readarr.com/donate");
