--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script async src=https://www.googletagmanager.com/gtag/js?id=G-H9DLX878J1></script>
+    <script async src=https://www.googletagmanager.com/gtag/js?id=G-3JJ0HDENW3></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -10,7 +10,7 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'G-H9DLX878J1');
+        gtag('config', 'G-3JJ0HDENW3');
     </script>
     <title>Readarr</title>
     <meta http-equiv=Content-Type content="text/html; charset=utf-8">
@@ -659,8 +659,8 @@ sudo systemctl enable --now readarr</code></pre>
     <script>
         hljs.initHighlightingOnLoad();
     </script>
-    <script src=js/theme.js?v=453b4ff1a4f41c49315a28f79aa5ea83></script>
-    <script type=text/javascript src=js/index-slider.js?v=48ba37f65a8c9499e4833ad1924fccb7></script>
+    <script src=js/theme.js?v=85693f7f35c872717ee514c10ca38fdc></script>
+    <script type=text/javascript src=js/index-slider.js?v=072006930bd52788bb7ab0a7d16861f7></script>
     <script type=text/javascript>
         if (window.location.hash.toLocaleLowerCase() === "#donate") {
             window.location.replace("https://readarr.com/donate");
