Recommend binary package

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                                                 For example, to use
                                                 <a href=https://github.com/Jguer/yay>yay</a>
                                                 to install the readarr package:
-                                            <pre><code class=bash>yay -S readarr</code></pre>
+                                            <pre><code class=bash>yay -S readarr-bin</code></pre>
                                             </p>
                                         </dd>
                                         <dt>
