--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ sudo systemctl enable --now readarr</code></pre>
                                 <div class="tab-pane fade" id=downloads-v1-linux-other role=tabpanel>
                                     <div class=install-description>
                                         <div class="alert alert-info">
-                                            Please contact us if you wish to port Readarr for any other distribution that the ones already listed.<br>
+                                            Please contact us if you wish to port Readarr for any other distribution than the ones already listed.<br>
                                         </div>
                                         <p>Generic .tar.gz downloads are available for linux, but dependencies, installation and permissions will need to be done manually.</p>
                                         <div>
