Add retirement notice

--- a/index.html
+++ b/index.html
@@ -29,6 +29,30 @@
 </head>
 
 <body class=pull_top data-spy=scroll data-target=.header-navbar data-offset=70>
+    <div class="announcement-banner container-fluid" style="background-color: #f8d7da; color: #721c24; padding: 70px 0 20px 0; margin-bottom: 20px;">
+        <div class="container">
+            <h1>Announcement: Retirement of Readarr</h1>
+
+            <p>We would like to announce that the <a href="https://github.com/Readarr/Readarr">Readarr project</a> has been retired. This difficult decision was made due to a combination of factors: the project's metadata has become unusable, we no longer have the time to remake or repair it, and the community effort to transition to using Open Library as the source has stalled without much progress.</p>
+
+            <p>Third-party metadata mirrors exist, but as we're not involved with them at all, we cannot provide support for them. Use of them is entirely at your own risk. The most popular mirror appears to be <a href="https://github.com/blampe/rreading-glasses">rreading-glasses</a>.</p>
+
+            <p>Without anyone to take over Readarr development, we expect it to wither away, so we still encourage you to seek alternatives to Readarr.</p>
+
+            <h2>Key Points:</h2>
+            <ul>
+                <li><strong>Effective Immediately</strong>: The retirement takes effect immediately. Please stay tuned for any possible further communications.</li>
+                <li><strong>Support Window</strong>: We will provide support during a brief transition period to help with troubleshooting non metadata related issues.</li>
+                <li><strong>Alternative Solutions</strong>: Users are encouraged to explore and adopt any other possible solutions as alternatives to Readarr.</li>
+                <li><strong>Opportunities for Revival</strong>: We are open to someone taking over and revitalizing the project. If you are interested, please get in touch.</li>
+                <li><strong>Gratitude</strong>: We extend our deepest gratitude to all the contributors and community members who supported Readarr over the years.</li>
+            </ul>
+
+            <p>Thank you for being part of the Readarr journey. For any inquiries or assistance during this transition, please contact our team.</p>
+
+            <p>Sincerely,<br>The Servarr Team</p>
+        </div>
+    </div>
     <div class="navbar navbar-inverse navbar-fixed-top" role=navigation>
         <div class=container>
             <div class=navbar-header>
